--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,7 +14,7 @@ body{
 }
 
 
-#card{
+main{
 	width: 350px;
 	height: 600px;
 	display: flex;
@@ -23,6 +23,13 @@ body{
 	flex-direction: column;
 	background-color: hsl(216, 50%, 16%);
 	border-radius: 10px;
+}
+
+h1{
+	margin:0px;
+	padding: 0px;
+	font-size: 22px;
+	font-weight: 600;
 }
 
 #card > div {
@@ -52,8 +59,6 @@ body{
 #ntf-name{
 	color:white;
 	margin-top:25px;
-	font-size: 22px;
-	font-weight: 600;
 }
 
 #ntf-name:hover{
