--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -55,19 +55,10 @@ main>div {
 	border-radius: 8px;
 }
 
-#main-pic-rollover:hover {
-	cursor: pointer;
-	background: hsla(178, 100%, 50%, 0.5) url("../images/icon-view.svg") no-repeat center;
-}
-
 #ntf-name {
 	color: white;
 	margin-top: 24px;
-}
-
-#ntf-name:hover {
-	color: hsl(178, 100%, 50%);
-	cursor: pointer;
+	transition: color 0.3s ease;
 }
 
 #ntf-description {
@@ -144,19 +135,30 @@ main>div {
 	padding-left: 5px;
 }
 
-#author-name:hover {
-	color: hsl(178, 100%, 50%);
-	cursor: pointer;
-}
 
+@media(hover:hover){
+	#author-name:hover {
+		color: hsl(178, 100%, 50%);
+		cursor: pointer;
+	}
+	
+	#main-pic-rollover:hover {
+		cursor: pointer;
+		background: hsla(178, 100%, 50%, 0.5) url("../images/icon-view.svg") no-repeat center;
+	}
+	
+	#ntf-name:hover {
+		color: hsl(178, 100%, 50%);
+		cursor: pointer;
+	}
+}
 
 /*############################## MOBILE VERSION ##############################*/
 
-@media screen and (max-width:480px) {
+@media screen and (max-width:375px) {
 	body {
 		align-items: flex-start;
 	}
-
 
 	main {
 		width: 327px;
